// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`offset complex shape 1, with offset -1 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              86.25,
              102.5,
            ],
            "clockwise": true,
            "firstPoint": [
              100.95027458385609,
              99.64250513946499,
            ],
            "lastPoint": [
              81.4782648084365,
              88.30514554564422,
            ],
            "type": "ARC",
          },
          {
            "center": [
              196.59999999999997,
              119.5333333333333,
            ],
            "clockwise": false,
            "firstPoint": [
              81.4782648084365,
              88.30514554564422,
            ],
            "lastPoint": [
              209.8885952050456,
              0.9937751112103597,
            ],
            "type": "ARC",
          },
          {
            "center": [
              210,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              209.8885952050456,
              0.9937751112103597,
            ],
            "lastPoint": [
              210,
              1,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              210,
              1,
            ],
            "lastPoint": [
              230,
              1,
            ],
            "type": "LINE",
          },
          {
            "center": [
              230,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              230,
              1,
            ],
            "lastPoint": [
              231,
              -1.2246467991473532e-16,
            ],
            "type": "ARC",
          },
          {
            "center": [
              275,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              231,
              -1.2246467991473532e-16,
            ],
            "lastPoint": [
              318.90783582312133,
              -2.8463930385355596,
            ],
            "type": "ARC",
          },
          {
            "center": [
              300,
              15.000000000000004,
            ],
            "clockwise": true,
            "firstPoint": [
              318.90783582312133,
              -2.8463930385355596,
            ],
            "lastPoint": [
              279.2,
              -0.5999999999999998,
            ],
            "type": "ARC",
          },
          {
            "center": [
              280,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              279.2,
              -0.5999999999999998,
            ],
            "lastPoint": [
              279.83970667456833,
              0.9870694250264589,
            ],
            "type": "ARC",
          },
          {
            "center": [
              256.25,
              146.25,
            ],
            "clockwise": false,
            "firstPoint": [
              279.83970667456833,
              0.9870694250264589,
            ],
            "lastPoint": [
              389.6416652607109,
              208.41475608571326,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              389.6416652607109,
              208.41475608571326,
            ],
            "lastPoint": [
              280.6332377902573,
              119.22604270079668,
            ],
            "type": "LINE",
          },
          {
            "center": [
              280,
              120,
            ],
            "clockwise": true,
            "firstPoint": [
              280.6332377902573,
              119.22604270079668,
            ],
            "lastPoint": [
              279.27115192790603,
              119.31532453833596,
            ],
            "type": "ARC",
          },
          {
            "center": [
              197.5,
              42.5,
            ],
            "clockwise": false,
            "firstPoint": [
              279.27115192790603,
              119.31532453833596,
            ],
            "lastPoint": [
              100.95027458385609,
              99.64250513946499,
            ],
            "type": "ARC",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 1, with offset -10 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              86.25,
              102.5,
            ],
            "clockwise": true,
            "firstPoint": [
              109.38445649049149,
              96.20572322843776,
            ],
            "lastPoint": [
              93.75199662635794,
              79.72850369857997,
            ],
            "type": "ARC",
          },
          {
            "center": [
              196.59999999999997,
              119.5333333333333,
            ],
            "clockwise": false,
            "firstPoint": [
              93.75199662635794,
              79.72850369857997,
            ],
            "lastPoint": [
              208.88595205045576,
              9.937751112103596,
            ],
            "type": "ARC",
          },
          {
            "center": [
              210,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              208.88595205045576,
              9.937751112103596,
            ],
            "lastPoint": [
              210,
              10,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              210,
              10,
            ],
            "lastPoint": [
              230,
              10,
            ],
            "type": "LINE",
          },
          {
            "center": [
              230,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              230,
              10,
            ],
            "lastPoint": [
              240,
              -1.2246467991473533e-15,
            ],
            "type": "ARC",
          },
          {
            "center": [
              275,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              240,
              -1.2246467991473533e-15,
            ],
            "lastPoint": [
              303.8711546899525,
              -19.785257816587453,
            ],
            "type": "ARC",
          },
          {
            "center": [
              300,
              15.000000000000004,
            ],
            "clockwise": true,
            "firstPoint": [
              303.8711546899525,
              -19.785257816587453,
            ],
            "lastPoint": [
              272,
              -5.999999999999997,
            ],
            "type": "ARC",
          },
          {
            "center": [
              280,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              272,
              -5.999999999999997,
            ],
            "lastPoint": [
              278.3970667456835,
              9.870694250264588,
            ],
            "type": "ARC",
          },
          {
            "center": [
              256.25,
              146.25,
            ],
            "clockwise": false,
            "firstPoint": [
              278.3970667456835,
              9.870694250264588,
            ],
            "lastPoint": [
              385.9795689075943,
              193.78994692116635,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              385.9795689075943,
              193.78994692116635,
            ],
            "lastPoint": [
              286.3323779025726,
              112.26042700796678,
            ],
            "type": "LINE",
          },
          {
            "center": [
              280,
              120,
            ],
            "clockwise": true,
            "firstPoint": [
              286.3323779025726,
              112.26042700796678,
            ],
            "lastPoint": [
              272.71151927906016,
              113.15324538335952,
            ],
            "type": "ARC",
          },
          {
            "center": [
              197.5,
              42.5,
            ],
            "clockwise": false,
            "firstPoint": [
              272.71151927906016,
              113.15324538335952,
            ],
            "lastPoint": [
              109.38445649049149,
              96.20572322843776,
            ],
            "type": "ARC",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 1, with offset -25 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              86.25,
              102.5,
            ],
            "clockwise": true,
            "firstPoint": [
              123.13729010675728,
              89.91383412040769,
            ],
            "lastPoint": [
              112.87974759922416,
              74.04055014990097,
            ],
            "type": "ARC",
          },
          {
            "center": [
              196.59999999999997,
              119.5333333333333,
            ],
            "clockwise": false,
            "firstPoint": [
              112.87974759922416,
              74.04055014990097,
            ],
            "lastPoint": [
              207.2148801261394,
              24.84437778025899,
            ],
            "type": "ARC",
          },
          {
            "center": [
              210,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              207.2148801261394,
              24.84437778025899,
            ],
            "lastPoint": [
              210,
              25,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              210,
              25,
            ],
            "lastPoint": [
              230,
              25,
            ],
            "type": "LINE",
          },
          {
            "center": [
              230,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              230,
              25,
            ],
            "lastPoint": [
              255,
              0,
            ],
            "type": "ARC",
          },
          {
            "center": [
              280,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              255,
              0,
            ],
            "lastPoint": [
              275.99266686420884,
              24.676735625661472,
            ],
            "type": "ARC",
          },
          {
            "center": [
              256.25,
              146.25,
            ],
            "clockwise": false,
            "firstPoint": [
              275.99266686420884,
              24.676735625661472,
            ],
            "lastPoint": [
              377.5646496724898,
              167.5240988148737,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              377.5646496724898,
              167.5240988148737,
            ],
            "lastPoint": [
              295.83094475643156,
              100.65106751991698,
            ],
            "type": "LINE",
          },
          {
            "center": [
              280,
              120,
            ],
            "clockwise": true,
            "firstPoint": [
              295.83094475643156,
              100.65106751991698,
            ],
            "lastPoint": [
              261.7787981976503,
              102.88311345839878,
            ],
            "type": "ARC",
          },
          {
            "center": [
              197.5,
              42.5,
            ],
            "clockwise": false,
            "firstPoint": [
              261.7787981976503,
              102.88311345839878,
            ],
            "lastPoint": [
              123.13729010675728,
              89.91383412040769,
            ],
            "type": "ARC",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 1, with offset -50 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              86.25,
              102.5,
            ],
            "clockwise": true,
            "firstPoint": [
              145.53660777906802,
              78.45934435194576,
            ],
            "lastPoint": [
              143.35509271632208,
              73.65795825886056,
            ],
            "type": "ARC",
          },
          {
            "center": [
              196.59999999999997,
              119.5333333333333,
            ],
            "clockwise": false,
            "firstPoint": [
              143.35509271632208,
              73.65795825886056,
            ],
            "lastPoint": [
              204.42976025227878,
              49.68875556051798,
            ],
            "type": "ARC",
          },
          {
            "center": [
              210,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              204.42976025227878,
              49.68875556051798,
            ],
            "lastPoint": [
              210,
              50,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              210,
              50,
            ],
            "lastPoint": [
              230,
              50,
            ],
            "type": "LINE",
          },
          {
            "center": [
              230,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              230,
              50,
            ],
            "lastPoint": [
              255,
              43.301270189221924,
            ],
            "type": "ARC",
          },
          {
            "center": [
              280,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              255,
              43.301270189221924,
            ],
            "lastPoint": [
              271.98533372841763,
              49.353471251322944,
            ],
            "type": "ARC",
          },
          {
            "center": [
              256.25,
              146.25,
            ],
            "clockwise": false,
            "firstPoint": [
              271.98533372841763,
              49.353471251322944,
            ],
            "lastPoint": [
              347.8268939821272,
              110.89168415105004,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              347.8268939821272,
              110.89168415105004,
            ],
            "lastPoint": [
              311.6618895128631,
              81.30213503983394,
            ],
            "type": "LINE",
          },
          {
            "center": [
              280,
              120,
            ],
            "clockwise": true,
            "firstPoint": [
              311.6618895128631,
              81.30213503983394,
            ],
            "lastPoint": [
              243.55759639530064,
              85.76622691679756,
            ],
            "type": "ARC",
          },
          {
            "center": [
              197.5,
              42.5,
            ],
            "clockwise": false,
            "firstPoint": [
              243.55759639530064,
              85.76622691679756,
            ],
            "lastPoint": [
              145.53660777906802,
              78.45934435194576,
            ],
            "type": "ARC",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 1, with offset -75 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              196.59999999999997,
              119.5333333333333,
            ],
            "clockwise": false,
            "firstPoint": [
              181.09377455445875,
              76.98896392503578,
            ],
            "lastPoint": [
              201.6446403784182,
              74.53313334077697,
            ],
            "type": "ARC",
          },
          {
            "center": [
              210,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              201.6446403784182,
              74.53313334077697,
            ],
            "lastPoint": [
              210,
              75,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              210,
              75,
            ],
            "lastPoint": [
              217.55998170468618,
              75,
            ],
            "type": "LINE",
          },
          {
            "center": [
              197.5,
              42.5,
            ],
            "clockwise": false,
            "firstPoint": [
              217.55998170468618,
              75,
            ],
            "lastPoint": [
              181.09377455445875,
              76.98896392503578,
            ],
            "type": "ARC",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 1, with offset 1 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              100,
              100,
            ],
            "clockwise": false,
            "firstPoint": [
              99.1386340966162,
              100.5079850199443,
            ],
            "lastPoint": [
              99.01613008990009,
              100.17888543819998,
            ],
            "type": "ARC",
          },
          {
            "center": [
              86.25,
              102.5,
            ],
            "clockwise": true,
            "firstPoint": [
              99.01613008990009,
              100.17888543819998,
            ],
            "lastPoint": [
              80.44721359549996,
              90.89442719099992,
            ],
            "type": "ARC",
          },
          {
            "center": [
              80,
              90,
            ],
            "clockwise": false,
            "firstPoint": [
              80.44721359549996,
              90.89442719099992,
            ],
            "lastPoint": [
              79.03061200808314,
              89.75446604893129,
            ],
            "type": "ARC",
          },
          {
            "center": [
              196.59999999999997,
              119.5333333333333,
            ],
            "clockwise": false,
            "firstPoint": [
              79.03061200808314,
              89.75446604893129,
            ],
            "lastPoint": [
              210.0557602940699,
              -1,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              210.0557602940699,
              -1,
            ],
            "lastPoint": [
              229.01087084973233,
              -1,
            ],
            "type": "LINE",
          },
          {
            "center": [
              275,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              229.01087084973233,
              -1,
            ],
            "lastPoint": [
              321,
              0,
            ],
            "type": "ARC",
          },
          {
            "center": [
              320,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              321,
              0,
            ],
            "lastPoint": [
              319.2,
              0.6000000000000001,
            ],
            "type": "ARC",
          },
          {
            "center": [
              300,
              15.000000000000004,
            ],
            "clockwise": true,
            "firstPoint": [
              319.2,
              0.6000000000000001,
            ],
            "lastPoint": [
              281.84993685471835,
              -0.7027133904395546,
            ],
            "type": "ARC",
          },
          {
            "center": [
              256.25,
              146.25,
            ],
            "clockwise": false,
            "firstPoint": [
              281.84993685471835,
              -0.7027133904395546,
            ],
            "lastPoint": [
              390.9027045169045,
              210.4302610314218,
            ],
            "type": "ARC",
          },
          {
            "center": [
              390,
              210,
            ],
            "clockwise": false,
            "firstPoint": [
              390.9027045169045,
              210.4302610314218,
            ],
            "lastPoint": [
              389.3667622097427,
              210.77395729920332,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              389.3667622097427,
              210.77395729920332,
            ],
            "lastPoint": [
              280.0865275685673,
              121.3628562291507,
            ],
            "type": "LINE",
          },
          {
            "center": [
              197.5,
              42.5,
            ],
            "clockwise": false,
            "firstPoint": [
              280.0865275685673,
              121.3628562291507,
            ],
            "lastPoint": [
              99.1386340966162,
              100.5079850199443,
            ],
            "type": "ARC",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 1, with offset 10 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              100,
              100,
            ],
            "clockwise": false,
            "firstPoint": [
              91.38634096616197,
              105.07985019944294,
            ],
            "lastPoint": [
              90.16130089900092,
              101.78885438199983,
            ],
            "type": "ARC",
          },
          {
            "center": [
              86.25,
              102.5,
            ],
            "clockwise": true,
            "firstPoint": [
              90.16130089900092,
              101.78885438199983,
            ],
            "lastPoint": [
              84.47213595499959,
              98.94427190999916,
            ],
            "type": "ARC",
          },
          {
            "center": [
              80,
              90,
            ],
            "clockwise": false,
            "firstPoint": [
              84.47213595499959,
              98.94427190999916,
            ],
            "lastPoint": [
              70.30612008083146,
              87.54466048931295,
            ],
            "type": "ARC",
          },
          {
            "center": [
              196.59999999999997,
              119.5333333333333,
            ],
            "clockwise": false,
            "firstPoint": [
              70.30612008083146,
              87.54466048931295,
            ],
            "lastPoint": [
              210.54757509084232,
              -10,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              210.54757509084232,
              -10,
            ],
            "lastPoint": [
              220.91673086804016,
              -10,
            ],
            "type": "LINE",
          },
          {
            "center": [
              275,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              220.91673086804016,
              -10,
            ],
            "lastPoint": [
              330,
              0,
            ],
            "type": "ARC",
          },
          {
            "center": [
              320,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              330,
              0,
            ],
            "lastPoint": [
              328.3642737214258,
              5.480777783587518,
            ],
            "type": "ARC",
          },
          {
            "center": [
              256.25,
              146.25,
            ],
            "clockwise": false,
            "firstPoint": [
              328.3642737214258,
              5.480777783587518,
            ],
            "lastPoint": [
              399.0270451690454,
              214.3026103142179,
            ],
            "type": "ARC",
          },
          {
            "center": [
              390,
              210,
            ],
            "clockwise": false,
            "firstPoint": [
              399.0270451690454,
              214.3026103142179,
            ],
            "lastPoint": [
              383.6676220974274,
              217.7395729920332,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              383.6676220974274,
              217.7395729920332,
            ],
            "lastPoint": [
              280.6185148201698,
              133.42666703791338,
            ],
            "type": "LINE",
          },
          {
            "center": [
              197.5,
              42.5,
            ],
            "clockwise": false,
            "firstPoint": [
              280.6185148201698,
              133.42666703791338,
            ],
            "lastPoint": [
              91.38634096616197,
              105.07985019944294,
            ],
            "type": "ARC",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 1, with offset 25 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              80,
              90,
            ],
            "clockwise": false,
            "firstPoint": [
              79.85252325302933,
              114.9995650083977,
            ],
            "lastPoint": [
              55.76530020207865,
              83.86165122328237,
            ],
            "type": "ARC",
          },
          {
            "center": [
              196.59999999999997,
              119.5333333333333,
            ],
            "clockwise": false,
            "firstPoint": [
              55.76530020207865,
              83.86165122328237,
            ],
            "lastPoint": [
              209.67751787311528,
              -25.158961202379587,
            ],
            "type": "ARC",
          },
          {
            "center": [
              275,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              209.67751787311528,
              -25.158961202379587,
            ],
            "lastPoint": [
              344.9564142479071,
              -2.4698391800326505,
            ],
            "type": "ARC",
          },
          {
            "center": [
              256.25,
              146.25,
            ],
            "clockwise": false,
            "firstPoint": [
              344.9564142479071,
              -2.4698391800326505,
            ],
            "lastPoint": [
              412.5676129226135,
              220.75652578554474,
            ],
            "type": "ARC",
          },
          {
            "center": [
              390,
              210,
            ],
            "clockwise": false,
            "firstPoint": [
              412.5676129226135,
              220.75652578554474,
            ],
            "lastPoint": [
              374.16905524356844,
              229.34893248008302,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              374.16905524356844,
              229.34893248008302,
            ],
            "lastPoint": [
              280.678097742924,
              152.85633088864665,
            ],
            "type": "LINE",
          },
          {
            "center": [
              197.5,
              42.5,
            ],
            "clockwise": false,
            "firstPoint": [
              280.678097742924,
              152.85633088864665,
            ],
            "lastPoint": [
              79.85252325302933,
              114.9995650083977,
            ],
            "type": "ARC",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 1, with offset 50 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              80,
              90,
            ],
            "clockwise": false,
            "firstPoint": [
              64.93650359040558,
              137.6769449096535,
            ],
            "lastPoint": [
              31.530600404157298,
              77.72330244656473,
            ],
            "type": "ARC",
          },
          {
            "center": [
              196.59999999999997,
              119.5333333333333,
            ],
            "clockwise": false,
            "firstPoint": [
              31.530600404157298,
              77.72330244656473,
            ],
            "lastPoint": [
              194.6840045888487,
              -50.73796291846885,
            ],
            "type": "ARC",
          },
          {
            "center": [
              275,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              194.6840045888487,
              -50.73796291846885,
            ],
            "lastPoint": [
              368.4495931441,
              -17.093084601738056,
            ],
            "type": "ARC",
          },
          {
            "center": [
              256.25,
              146.25,
            ],
            "clockwise": false,
            "firstPoint": [
              368.4495931441,
              -17.093084601738056,
            ],
            "lastPoint": [
              435.13522584522696,
              231.51305157108948,
            ],
            "type": "ARC",
          },
          {
            "center": [
              390,
              210,
            ],
            "clockwise": false,
            "firstPoint": [
              435.13522584522696,
              231.51305157108948,
            ],
            "lastPoint": [
              358.3381104871369,
              248.69786496016604,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              358.3381104871369,
              248.69786496016604,
            ],
            "lastPoint": [
              279.0711827025142,
              183.84310586365655,
            ],
            "type": "LINE",
          },
          {
            "center": [
              197.5,
              42.5,
            ],
            "clockwise": false,
            "firstPoint": [
              279.0711827025142,
              183.84310586365655,
            ],
            "lastPoint": [
              64.93650359040558,
              137.6769449096535,
            ],
            "type": "ARC",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 2, with offset -1 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              0,
              12.5,
            ],
            "clockwise": false,
            "firstPoint": [
              -0.21643577022031746,
              23.99796310471421,
            ],
            "lastPoint": [
              1.8369701987210297e-16,
              1,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              0,
              1,
            ],
            "lastPoint": [
              2,
              1,
            ],
            "type": "LINE",
          },
          {
            "center": [
              2,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              2,
              1,
            ],
            "lastPoint": [
              3,
              -1.2246467991473532e-16,
            ],
            "type": "ARC",
          },
          {
            "center": [
              6,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              3,
              -1.2246467991473532e-16,
            ],
            "lastPoint": [
              8.943961971662457,
              -0.5771376866964242,
            ],
            "type": "ARC",
          },
          {
            "center": [
              12.375,
              5.25,
            ],
            "clockwise": true,
            "firstPoint": [
              8.943961971662457,
              -0.5771376866964242,
            ],
            "lastPoint": [
              7.240743397634704,
              9.650791373455968,
            ],
            "type": "ARC",
          },
          {
            "center": [
              8,
              9,
            ],
            "clockwise": true,
            "firstPoint": [
              7.240743397634704,
              9.650791373455968,
            ],
            "lastPoint": [
              8.969387991916854,
              9.245533951068706,
            ],
            "type": "ARC",
          },
          {
            "center": [
              19.659999999999997,
              11.953333333333333,
            ],
            "clockwise": false,
            "firstPoint": [
              8.969387991916854,
              9.245533951068706,
            ],
            "lastPoint": [
              20.888595205045576,
              0.9937751112103597,
            ],
            "type": "ARC",
          },
          {
            "center": [
              21,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              20.888595205045576,
              0.9937751112103597,
            ],
            "lastPoint": [
              21,
              1,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              21,
              1,
            ],
            "lastPoint": [
              23,
              1,
            ],
            "type": "LINE",
          },
          {
            "center": [
              23,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              23,
              1,
            ],
            "lastPoint": [
              24,
              -1.2246467991473532e-16,
            ],
            "type": "ARC",
          },
          {
            "center": [
              27.5,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              24,
              -1.2246467991473532e-16,
            ],
            "lastPoint": [
              30.38711546899525,
              -1.9785257816587427,
            ],
            "type": "ARC",
          },
          {
            "center": [
              30,
              1.5,
            ],
            "clockwise": true,
            "firstPoint": [
              30.38711546899525,
              -1.9785257816587427,
            ],
            "lastPoint": [
              27.2,
              -0.5999999999999998,
            ],
            "type": "ARC",
          },
          {
            "center": [
              28,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              27.2,
              -0.5999999999999998,
            ],
            "lastPoint": [
              27.839706674568355,
              0.9870694250264589,
            ],
            "type": "ARC",
          },
          {
            "center": [
              25.625,
              14.625000000000002,
            ],
            "clockwise": false,
            "firstPoint": [
              27.839706674568355,
              0.9870694250264589,
            ],
            "lastPoint": [
              38.597956890759434,
              19.37899469211664,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              38.597956890759434,
              19.37899469211664,
            ],
            "lastPoint": [
              28.63323779025726,
              11.226042700796679,
            ],
            "type": "LINE",
          },
          {
            "center": [
              28,
              12,
            ],
            "clockwise": true,
            "firstPoint": [
              28.63323779025726,
              11.226042700796679,
            ],
            "lastPoint": [
              27.57888869354537,
              11.092991032251568,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              27.57888869354537,
              11.092991032251568,
            ],
            "lastPoint": [
              -0.21643577022031746,
              23.99796310471421,
            ],
            "type": "LINE",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 2, with offset -2 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              0,
              12.5,
            ],
            "clockwise": false,
            "firstPoint": [
              -0.42326379893794996,
              22.991465472302174,
            ],
            "lastPoint": [
              3.6739403974420594e-16,
              2,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              0,
              2,
            ],
            "lastPoint": [
              2,
              2,
            ],
            "type": "LINE",
          },
          {
            "center": [
              2,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              2,
              2,
            ],
            "lastPoint": [
              4,
              -2.4492935982947064e-16,
            ],
            "type": "ARC",
          },
          {
            "center": [
              6,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              4,
              -2.4492935982947064e-16,
            ],
            "lastPoint": [
              7.743833460661269,
              -0.9793083587298466,
            ],
            "type": "ARC",
          },
          {
            "center": [
              12.375,
              5.25,
            ],
            "clockwise": true,
            "firstPoint": [
              7.743833460661269,
              -0.9793083587298466,
            ],
            "lastPoint": [
              6.481486795269407,
              10.301582746911937,
            ],
            "type": "ARC",
          },
          {
            "center": [
              8,
              9,
            ],
            "clockwise": true,
            "firstPoint": [
              6.481486795269407,
              10.301582746911937,
            ],
            "lastPoint": [
              9.938775983833708,
              9.491067902137411,
            ],
            "type": "ARC",
          },
          {
            "center": [
              19.659999999999997,
              11.953333333333333,
            ],
            "clockwise": false,
            "firstPoint": [
              9.938775983833708,
              9.491067902137411,
            ],
            "lastPoint": [
              20.77719041009115,
              1.9875502224207193,
            ],
            "type": "ARC",
          },
          {
            "center": [
              21,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              20.77719041009115,
              1.9875502224207193,
            ],
            "lastPoint": [
              21,
              2,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              21,
              2,
            ],
            "lastPoint": [
              23,
              2,
            ],
            "type": "LINE",
          },
          {
            "center": [
              23,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              23,
              2,
            ],
            "lastPoint": [
              25,
              -2.4492935982947064e-16,
            ],
            "type": "ARC",
          },
          {
            "center": [
              27.5,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              25,
              -2.4492935982947064e-16,
            ],
            "lastPoint": [
              27.88235294117647,
              -2.4705882352941178,
            ],
            "type": "ARC",
          },
          {
            "center": [
              30,
              1.5,
            ],
            "clockwise": true,
            "firstPoint": [
              27.88235294117647,
              -2.4705882352941178,
            ],
            "lastPoint": [
              26.4,
              -1.1999999999999995,
            ],
            "type": "ARC",
          },
          {
            "center": [
              28,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              26.4,
              -1.1999999999999995,
            ],
            "lastPoint": [
              27.679413349136706,
              1.9741388500529178,
            ],
            "type": "ARC",
          },
          {
            "center": [
              25.625,
              14.625000000000002,
            ],
            "clockwise": false,
            "firstPoint": [
              27.679413349136706,
              1.9741388500529178,
            ],
            "lastPoint": [
              38.07690445952441,
              17.660618120783262,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              38.07690445952441,
              17.660618120783262,
            ],
            "lastPoint": [
              29.266475580514527,
              10.452085401593358,
            ],
            "type": "LINE",
          },
          {
            "center": [
              28,
              12,
            ],
            "clockwise": true,
            "firstPoint": [
              29.266475580514527,
              10.452085401593358,
            ],
            "lastPoint": [
              27.157777387090743,
              10.185982064503136,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              27.157777387090743,
              10.185982064503136,
            ],
            "lastPoint": [
              -0.42326379893794996,
              22.991465472302174,
            ],
            "type": "LINE",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 2, with offset -5 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              0,
              12.5,
            ],
            "clockwise": false,
            "firstPoint": [
              -0.9687829798578096,
              19.93716744049358,
            ],
            "lastPoint": [
              9.184850993605148e-16,
              5,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              0,
              5,
            ],
            "lastPoint": [
              1.6156887832872613,
              5,
            ],
            "type": "LINE",
          },
          {
            "center": [
              12.375,
              5.25,
            ],
            "clockwise": true,
            "firstPoint": [
              1.6156887832872613,
              5,
            ],
            "lastPoint": [
              4.203716988173518,
              12.253956867279843,
            ],
            "type": "ARC",
          },
          {
            "center": [
              8,
              9,
            ],
            "clockwise": true,
            "firstPoint": [
              4.203716988173518,
              12.253956867279843,
            ],
            "lastPoint": [
              12.846939959584269,
              10.227669755343529,
            ],
            "type": "ARC",
          },
          {
            "center": [
              19.659999999999997,
              11.953333333333333,
            ],
            "clockwise": false,
            "firstPoint": [
              12.846939959584269,
              10.227669755343529,
            ],
            "lastPoint": [
              20.44297602522788,
              4.968875556051798,
            ],
            "type": "ARC",
          },
          {
            "center": [
              21,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              20.44297602522788,
              4.968875556051798,
            ],
            "lastPoint": [
              21,
              5,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              21,
              5,
            ],
            "lastPoint": [
              23,
              5,
            ],
            "type": "LINE",
          },
          {
            "center": [
              23,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              23,
              5,
            ],
            "lastPoint": [
              25.5,
              4.330127018922193,
            ],
            "type": "ARC",
          },
          {
            "center": [
              28,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              25.5,
              4.330127018922193,
            ],
            "lastPoint": [
              27.198533372841766,
              4.935347125132294,
            ],
            "type": "ARC",
          },
          {
            "center": [
              25.625,
              14.625000000000002,
            ],
            "clockwise": false,
            "firstPoint": [
              27.198533372841766,
              4.935347125132294,
            ],
            "lastPoint": [
              34.782689398212725,
              11.089168415105005,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              34.782689398212725,
              11.089168415105005,
            ],
            "lastPoint": [
              31.166188951286312,
              8.130213503983395,
            ],
            "type": "LINE",
          },
          {
            "center": [
              28,
              12,
            ],
            "clockwise": true,
            "firstPoint": [
              31.166188951286312,
              8.130213503983395,
            ],
            "lastPoint": [
              25.894443467726855,
              7.4649551612578415,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              25.894443467726855,
              7.4649551612578415,
            ],
            "lastPoint": [
              -0.9687829798578096,
              19.93716744049358,
            ],
            "type": "LINE",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 2, with offset -7 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              0,
              12.5,
            ],
            "clockwise": false,
            "firstPoint": [
              -1.2405109844523396,
              17.85827700827916,
            ],
            "lastPoint": [
              -0.26577173020344524,
              7.006425081295,
            ],
            "type": "ARC",
          },
          {
            "center": [
              12.375,
              5.25,
            ],
            "clockwise": true,
            "firstPoint": [
              -0.26577173020344524,
              7.006425081295,
            ],
            "lastPoint": [
              2.6852037834429243,
              13.555539614191781,
            ],
            "type": "ARC",
          },
          {
            "center": [
              8,
              9,
            ],
            "clockwise": true,
            "firstPoint": [
              2.6852037834429243,
              13.555539614191781,
            ],
            "lastPoint": [
              4.627322387194793,
              15.13392580001442,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              4.627322387194793,
              15.13392580001442,
            ],
            "lastPoint": [
              -1.2405109844523396,
              17.85827700827916,
            ],
            "type": "LINE",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
    {
      "contour": {
        "segments": [
          {
            "center": [
              19.659999999999997,
              11.953333333333333,
            ],
            "clockwise": false,
            "firstPoint": [
              14.887496059225676,
              10.370273738000085,
            ],
            "lastPoint": [
              20.22016643531903,
              6.956425778472518,
            ],
            "type": "ARC",
          },
          {
            "center": [
              21,
              0,
            ],
            "clockwise": true,
            "firstPoint": [
              20.22016643531903,
              6.956425778472518,
            ],
            "lastPoint": [
              21,
              7,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              21,
              7,
            ],
            "lastPoint": [
              22.14654718722586,
              7,
            ],
            "type": "LINE",
          },
          {
            "firstPoint": [
              22.14654718722586,
              7,
            ],
            "lastPoint": [
              14.887496059225676,
              10.370273738000085,
            ],
            "type": "LINE",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 2, with offset -10 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              0,
              12.5,
            ],
            "clockwise": false,
            "firstPoint": [
              -1.3523730172499955,
              14.602638157699548,
            ],
            "lastPoint": [
              -2.1855973094019827,
              11.286260159204279,
            ],
            "type": "ARC",
          },
          {
            "center": [
              12.375,
              5.25,
            ],
            "clockwise": true,
            "firstPoint": [
              -2.1855973094019827,
              11.286260159204279,
            ],
            "lastPoint": [
              -0.5719045034444559,
              14.240277776289833,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              -0.5719045034444559,
              14.240277776289833,
            ],
            "lastPoint": [
              -1.3523730172499955,
              14.602638157699548,
            ],
            "type": "LINE",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 2, with offset 1 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              0,
              25,
            ],
            "clockwise": false,
            "firstPoint": [
              0.421111306454629,
              25.907008967748432,
            ],
            "lastPoint": [
              6.123233995736766e-17,
              26,
            ],
            "type": "ARC",
          },
          {
            "center": [
              0,
              12.5,
            ],
            "clockwise": false,
            "firstPoint": [
              6.123233995736766e-17,
              26,
            ],
            "lastPoint": [
              -1.8369701987210297e-16,
              -1,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              0,
              -1,
            ],
            "lastPoint": [
              1.1010205144336442,
              -1,
            ],
            "type": "LINE",
          },
          {
            "center": [
              6,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              1.1010205144336442,
              -1,
            ],
            "lastPoint": [
              11,
              0,
            ],
            "type": "ARC",
          },
          {
            "center": [
              10,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              11,
              0,
            ],
            "lastPoint": [
              10.412167869855447,
              0.911107922838356,
            ],
            "type": "ARC",
          },
          {
            "center": [
              12.375,
              5.25,
            ],
            "clockwise": true,
            "firstPoint": [
              10.412167869855447,
              0.911107922838356,
            ],
            "lastPoint": [
              7.798077962282218,
              6.565476753514555,
            ],
            "type": "ARC",
          },
          {
            "center": [
              19.659999999999997,
              11.953333333333333,
            ],
            "clockwise": false,
            "firstPoint": [
              7.798077962282218,
              6.565476753514555,
            ],
            "lastPoint": [
              21.054757509084205,
              -1,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              21.054757509084205,
              -1,
            ],
            "lastPoint": [
              22.091673086804015,
              -1,
            ],
            "type": "LINE",
          },
          {
            "center": [
              27.5,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              22.091673086804015,
              -1,
            ],
            "lastPoint": [
              33,
              0,
            ],
            "type": "ARC",
          },
          {
            "center": [
              32,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              33,
              0,
            ],
            "lastPoint": [
              32.83642737214257,
              0.5480777783587559,
            ],
            "type": "ARC",
          },
          {
            "center": [
              25.625,
              14.625000000000002,
            ],
            "clockwise": false,
            "firstPoint": [
              32.83642737214257,
              0.5480777783587559,
            ],
            "lastPoint": [
              39.90270451690454,
              21.43026103142179,
            ],
            "type": "ARC",
          },
          {
            "center": [
              39,
              21,
            ],
            "clockwise": false,
            "firstPoint": [
              39.90270451690454,
              21.43026103142179,
            ],
            "lastPoint": [
              38.36676220974274,
              21.77395729920332,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              38.36676220974274,
              21.77395729920332,
            ],
            "lastPoint": [
              27.852209892633105,
              13.17114176702271,
            ],
            "type": "LINE",
          },
          {
            "firstPoint": [
              27.852209892633105,
              13.17114176702271,
            ],
            "lastPoint": [
              0.421111306454629,
              25.907008967748432,
            ],
            "type": "LINE",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;

exports[`offset complex shape 2, with offset 20 1`] = `
{
  "figures": [
    {
      "contour": {
        "segments": [
          {
            "center": [
              0,
              25,
            ],
            "clockwise": false,
            "firstPoint": [
              8.42222612909258,
              43.14017935496864,
            ],
            "lastPoint": [
              1.2246467991473533e-15,
              45,
            ],
            "type": "ARC",
          },
          {
            "center": [
              0,
              12.5,
            ],
            "clockwise": false,
            "firstPoint": [
              1.2246467991473533e-15,
              45,
            ],
            "lastPoint": [
              -9.011703511053314,
              -18.725617685305593,
            ],
            "type": "ARC",
          },
          {
            "center": [
              6,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              -9.011703511053314,
              -18.725617685305593,
            ],
            "lastPoint": [
              16.186046511627907,
              -21.73118626451287,
            ],
            "type": "ARC",
          },
          {
            "center": [
              27.5,
              0,
            ],
            "clockwise": false,
            "firstPoint": [
              16.186046511627907,
              -21.73118626451287,
            ],
            "lastPoint": [
              49.55914509797928,
              -10.66039950219017,
            ],
            "type": "ARC",
          },
          {
            "center": [
              25.625,
              14.625000000000002,
            ],
            "clockwise": false,
            "firstPoint": [
              49.55914509797928,
              -10.66039950219017,
            ],
            "lastPoint": [
              57.05409033809079,
              29.605220628435795,
            ],
            "type": "ARC",
          },
          {
            "center": [
              39,
              21,
            ],
            "clockwise": false,
            "firstPoint": [
              57.05409033809079,
              29.605220628435795,
            ],
            "lastPoint": [
              26.335244194854745,
              36.47914598406642,
            ],
            "type": "ARC",
          },
          {
            "firstPoint": [
              26.335244194854745,
              36.47914598406642,
            ],
            "lastPoint": [
              25.04419785266207,
              35.42283534045423,
            ],
            "type": "LINE",
          },
          {
            "firstPoint": [
              25.04419785266207,
              35.42283534045423,
            ],
            "lastPoint": [
              8.42222612909258,
              43.14017935496864,
            ],
            "type": "LINE",
          },
        ],
        "type": "LOOP",
      },
      "holes": [],
      "type": "FIGURE",
    },
  ],
  "type": "DIAGRAM",
}
`;
